@@ -10,6 +10,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 @Service
@@ -31,8 +32,8 @@ public class AnswerDataService extends AbstractDataService<AnswerEntity, Integer
         return repository.findAll()
                 .stream()
                 .map(AnswerDto::convertToDto)
-                .filter(answerDto -> answerDto.getQuestion_id() == question_id)
-                .collect(Collectors.toList());
+                .filter(answerDto -> Objects.equals(answerDto.getQuestion_id(), question_id))
+                .toList();
     }
 
     public static AnswerEntity convertToEntity(AnswerDto answerDto, QuestionRepository questionRepository) {
